Closed Bug 781542 Opened 12 years ago Closed 12 years ago

Video performance regression on ICS/JB

Categories

(Firefox for Android Graveyard :: Plugins, defect)

ARM
Android
defect
Not set
normal

Tracking

(firefox19 verified)

VERIFIED FIXED
Firefox 17
Tracking Status
firefox19 --- verified

People

(Reporter: snorp, Assigned: snorp)

Details

Attachments

(1 file)

Recently in Nightly, video performance in Flash on ICS and higher seems to have regressed rather badly.
It looks like invalidating the layer in response to video surface changes is not very efficient. It used to work ok, though.
Assignee: nobody → snorp
Attachment #651775 - Flags: review?(blassey.bugs) → review+
https://hg.mozilla.org/mozilla-central/rev/6a85b6cd56ff
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 17
Video performance seems to be quite good on the latest Nightly build. Closing bug as verified fixed on:

Firefox 19.0a1 (2012-10-10)
Device: Galaxy Note
OS: Android 4.0.4
Status: RESOLVED → VERIFIED
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: