Bug 781542 - Don't require a layer invalidation for Flash video on Android r=blassey